# DOP

./: README.md
Labo 01 - tools/: README.md
Labo 01 - tools/frontend/: package-lock.json
Labo 02 - docker/: README.md  compose.yml
Labo 02 - docker/backend/: pyproject.toml
Labo 02 - docker/frontend/: Dockerfile  nginx.conf
Labo 03 - compose/: README.md
Labo 03 - compose/backend/: pyproject.toml
Labo 04 - CICD/: README.md
Labo 04 - CICD/backend/: pyproject.toml
Labo 05 - Kubernetes/: README.md  compose.yml  deployment.yaml
Labo 05 - Kubernetes/backend/: Makefile
Labo 06 - CICD Java/: Dockerfile  README.md  compose.yml  deployment.yaml
Labo 07 - Helm/: README.md
Labo 07 - Helm/backend/: Dockerfile
Labo 07 - Helm/frontend/: Dockerfile
Labo 08 - Logs/: README.md  compose.yml  report.md
Labo 08 - Logs/fluentd/: Dockerfile  fluent.conf
Labo 09 - metrics/: README.md  compose.yml  deployment.yaml
Labo 09 - metrics/backend/: pyproject.toml
Labo 09 - metrics/backend/src/backend/: main.py
Labo 09 - metrics/frontend/: package-lock.json
Labo 09 - metrics/helm-chart/: values.yaml
Labo 10 - traces/: README.md  compose.yml  package-lock.json
Labo 10 - traces/backend/: pyproject.toml
Labo 10 - traces/collector/: config.yaml
Labo 10 - traces/frontend/: package.json
Labo 10 - traces/prometheus/: prometheus.yml
Labo 11 - observability/: Dockerfile  README.md  compose.yml  pom.xml  report.md
Labo 11 - observability/fluentd/: Dockerfile  fluent.conf
Labo 11 - observability/prometheus/: prometheus.yml
(+18 files in other folders)
